# Cigitron

./: CMakeLists.txt  README.md  calculator_logic.c  calculator_logic.h  main.c  ui.c  ui.h
